Change endpoint on findall docs
