# docs/swagger.yaml
@@ -133,6 +133,26 @@ paths:
       summary: Delete order
       tags:
       - orders
+    get:
+      consumes:
+      - application/json
+      description: Get orders by user id
+      parameters:
+      - description: User ID
+        in: path
+        name: order_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/helper.Response'
+      summary: Show orders by user id
+      tags:
+      - orders
     put:
       consumes:
       - application/json
@@ -157,27 +177,6 @@ paths:
           schema:
             $ref: '#/definitions/helper.Response'
       summary: Update order
-      tags:
-      - orders
-  /orders/{user_id}:
-    get:
-      consumes:
-      - application/json
-      description: Get orders by user id
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/helper.Response'
-      summary: Show orders by user id
       tags:
       - orders
 schemes:
